fix spacing of column in project table for mobile view

--- a/packages/client-core/src/admin/styles/admin.module.scss
+++ b/packages/client-core/src/admin/styles/admin.module.scss
@@ -695,6 +695,7 @@
 .checkboxButton {
   margin: 0;
   padding: 0;
+  width: 100%;
   color: var(--text);
 }
 
